# Kyouhara

./: .gitignore  Cargo.toml  README.md  t.wasm  thiet-ke-mong-engine.md
.github/workflows/: ci.yml
ci/: safari_check.py
crates/mong-assets/: Cargo.toml
crates/mong-assets/src/: lib.rs  manifest.rs  watch.rs
crates/mong-assets/tests/: fuzz_pack.rs  roundtrip.rs
crates/mong-assets/tests/data/: demo-manifest.json
crates/mong-audio/: Cargo.toml
crates/mong-audio/src/: kira_sink.rs  lib.rs  web_sink.rs
crates/mong-cli/: Cargo.toml
crates/mong-cli/src/: main.rs
crates/mong-core/: Cargo.toml
crates/mong-core/src/: ir.rs  lib.rs  story.rs  vars.rs  vm.rs
crates/mong-core/tests/: fuzz_lite.rs  save.rs  v1.rs  vm.rs
crates/mong-i18n/: Cargo.toml
crates/mong-i18n/src/: lib.rs
crates/mong-plugin/: Cargo.toml
crates/mong-plugin/src/: lib.rs
crates/mong-plugin/tests/: host.rs
crates/mong-project/: Cargo.toml
crates/mong-project/src/: dir.rs  lib.rs
crates/mong-project/tests/: round_trip.rs
crates/mong-render/: Cargo.toml
crates/mong-render/src/: image.rs  lib.rs  sprite.wgsl
crates/mong-render/src/text/: atlas.rs  mod.rs  shape.rs
crates/mong-render/tests/: chuoi_hiem.rs
crates/mong-runtime/: Cargo.toml
crates/mong-runtime/src/: draw.rs  lib.rs  stage.rs  text.rs  ui.rs
crates/mong-runtime/tests/: patch.rs  plugin.rs  san_khau.rs
crates/mong-script/: Cargo.toml
crates/mong-script/src/: lib.rs  lint.rs  mongscript.pest
crates/mong-script/src/dsl/: ast.rs  lower.rs  mod.rs  parse.rs  print.rs
crates/mong-script/tests/: dod_m2.rs  dsl.rs  fmt.rs  golden.rs
crates/mong-script/tests/data/: demo-story.json  demo-strings.vi.json
crates/mong-script/tests/golden/: demo_ket_dep.golden.json  demo_ket_thuong.golden.json  demo_rollback_re_nhanh_khac.golden.json  v1_rand_goto_set_expr.golden.json
docs/: lint-rules.md  m3-ket-thuc.md  m4-ket-thuc.md  m5-ket-thuc.md  mongpack-entries.md  quy-uoc-code.md  spec-devlink.md  spec-ir.md  spec-mongscript.md  spec-plugin.md  thiet-ke-mong-engine.md
examples/quan-ca-phe/: manifest.json  story.mongscript
examples/quan-ca-phe/plugins/: chen_bien.rhai  go_chu.rhai  rung.rhai
shells/common/: Cargo.toml
shells/common/src/: app.rs  devlink.rs  lib.rs  state.rs
shells/desktop/: Cargo.toml
shells/desktop/examples/: gen_placeholders.rs
shells/desktop/examples/quan-ca-phe/: manifest.json  story.mongscript
shells/desktop/src/: main.rs  project.rs  ui.rs
shells/web/: Cargo.toml  build.ps1  index.html
shells/web/src/: lib.rs
