[package]
name = "mong-assets"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
watch = ["dep:notify"]

[dependencies]
flate2 = { workspace = true }
crc32fast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
mong-core = { path = "../mong-core" }
mong-script = { path = "../mong-script" }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = { version = "6", optional = true }
