[package]
name = "mong-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["fs"]
# Nạp từ thư mục dự án: cần fs + parser DSL. Shell web KHÔNG bật — đó là cách
# mong-script (pest) không lọt vào bundle wasm.
fs = ["dep:mong-script"]

[dependencies]
mong-core = { path = "../mong-core" }
mong-assets = { path = "../mong-assets" }
mong-i18n = { path = "../mong-i18n" }
mong-script = { path = "../mong-script", optional = true }
serde_json = "1"
serde = { workspace = true }
