[package]
name = "mong-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mong-audio = { path = "../../crates/mong-audio", default-features = false }
mong-core = { path = "../../crates/mong-core" }
mong-project = { path = "../../crates/mong-project", default-features = false }
mong-render = { path = "../../crates/mong-render" }
mong-runtime = { path = "../../crates/mong-runtime" }
wgpu = "22"
winit = "0.30"
# Instant chạy cả wasm (performance.now) lẫn native. Runtime vẫn xác định:
# shell chỉ đưa `dt` xuống, core không bao giờ đọc đồng hồ.
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mong-audio = { path = "../../crates/mong-audio", features = ["kira-backend"] }
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "22", features = ["webgl"] }
mong-audio = { path = "../../crates/mong-audio", features = ["web-backend"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement"] }
