[package]
name = "mong-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
dev = ["dep:tungstenite"]

[dependencies]
mong-audio = { path = "../../crates/mong-audio", default-features = false }
mong-core = { path = "../../crates/mong-core" }
mong-project = { path = "../../crates/mong-project", default-features = false }
mong-render = { path = "../../crates/mong-render" }
mong-runtime = { path = "../../crates/mong-runtime" }
wgpu = "22"
winit = "0.30"
web-time = "1"
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mong-audio = { path = "../../crates/mong-audio", features = ["kira-backend"] }
pollster = "0.3"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "22", features = ["webgl"] }
mong-audio = { path = "../../crates/mong-audio", features = ["web-backend"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement"] }
