[package]
name = "mong-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mong-desktop"
path = "src/main.rs"
test = false

[dependencies]
mong-project = { path = "../../crates/mong-project" }
mong-shell = { path = "../common" }

[dev-dependencies]
# Chỉ example gen_placeholders dùng — nó *ghi* PNG/WAV.
png = "0.17"
