[package]
name = "mong-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mong-desktop"
path = "src/main.rs"
test = false

[features]
dev = ["mong-shell/dev"]

[dependencies]
mong-project = { path = "../../crates/mong-project" }
mong-shell = { path = "../common" }
env_logger = "0.11"

[dev-dependencies]
# Chỉ example gen_placeholders dùng — nó *ghi* PNG/WAV.
png = "0.17"
