[package]
name = "mong-web"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mong-project = { path = "../../crates/mong-project", default-features = false }
mong-shell = { path = "../common" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
